--- a/src/dm/CMakeLists.txt
+++ b/src/dm/CMakeLists.txt
@@ -33,6 +33,8 @@ SET(DM_SRCS  dm.h dmTime.h
 	gldraw.cpp )
 
 ADD_LIBRARY(dm SHARED ${DM_SRCS})
+TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY})
+
 SET_TARGET_PROPERTIES(dm PROPERTIES VERSION 4.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
