--- a/src/dmu/CMakeLists.txt
+++ b/src/dmu/CMakeLists.txt
@@ -10,6 +10,8 @@ SET(DMU_SRCS  	dmu.h dmUtils.cpp
 	glLoadModels.h glLoadModels.cpp )
 
 ADD_LIBRARY(dmu SHARED ${DMU_SRCS})
+TARGET_LINK_LIBRARIES(dmu ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
+
 SET_TARGET_PROPERTIES(dmu PROPERTIES VERSION 4.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
