Updated Macros and CMakeLists for Mac 10.7 (Lion) Compatibility
1) Main CMakeLists now contains platform dependent compiler and linker
flags
2) Other src files contain platform checking Macros to point to the
correct GL and GLUT headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,16 @@ PROJECT(DynaMechs)
 MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
 MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
 MESSAGE(STATUS "CMAKE_ROOT is" ${CMAKE_ROOT})
+MESSAGE(STATUS "CMAKE_SYSTEM_NAME is " ${CMAKE_SYSTEM_NAME})
 
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+MESSAGE(STATUS "Adding Mac hooks (tested with OSX 10.7)")
 SET(CMAKE_CXX_FLAGS "-isysroot /Developer/SDKs/MacOSX10.6.sdk")
-MESSAGE(STATUS "CMAKE_CXX_FLAGS is " ${CMAKE_CXX_FLAGS})
+SET(CMAKE_SHARED_LINKER_FLAGS "-lglut -L/usr/X11/lib")
+SET(CMAKE_EXE_LINKER_FLAGS "-lglut -L/usr/X11/lib")
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+
 # /usr/share/cmake-2.8/Modules
 find_package(GLUT)
 find_package(OpenGL)
