--- a/src/dmu/CMakeLists.txt
+++ b/src/dmu/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(DMU_SRCS  	dmu.h dmUtils.cpp
 	glLoadModels.h glLoadModels.cpp )
 
 ADD_LIBRARY(dmu SHARED ${DMU_SRCS})
-TARGET_LINK_LIBRARIES(dmu ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
+TARGET_LINK_LIBRARIES(dmu ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm)
 
 SET_TARGET_PROPERTIES(dmu PROPERTIES VERSION 4.0 SOVERSION 1)
 
