--- a/src/dmu/CMakeLists.txt
+++ b/src/dmu/CMakeLists.txt
@@ -15,3 +15,8 @@ TARGET_LINK_LIBRARIES(dmu ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm)
 SET_TARGET_PROPERTIES(dmu PROPERTIES VERSION 4.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+
+INSTALL(TARGETS dmu 
+        LIBRARY DESTINATION dynamechs/lib)
+FILE( GLOB DMU_HEADERS [^.]*.h [^.]*.hpp )
+INSTALL(FILES ${DMU_HEADERS} DESTINATION dynamechs/dmu)
