--- a/src/dm/CMakeLists.txt
+++ b/src/dm/CMakeLists.txt
@@ -39,5 +39,9 @@ SET_TARGET_PROPERTIES(dm PROPERTIES VERSION 4.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
-
+INSTALL(TARGETS dm 
+        LIBRARY DESTINATION dynamechs/lib)
+FILE( GLOB DM_HEADERS [^.]*.h [^.]*.hpp )
+# MESSAGE(STATUS "dm headers" ${DM_HEADERS})
+INSTALL(FILES ${DM_HEADERS} DESTINATION dynamechs/dm)
 
