--- a/src/dmgl/CMakeLists.txt
+++ b/src/dmgl/CMakeLists.txt
@@ -13,3 +13,9 @@ TARGET_LINK_LIBRARIES(dmgl ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu)
 SET_TARGET_PROPERTIES(dmgl PROPERTIES VERSION 4.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+
+
+INSTALL(TARGETS dmgl 
+        LIBRARY DESTINATION dynamechs/lib)
+FILE( GLOB DMGL_HEADERS [^.]*.h [^.]*.hpp )
+INSTALL(FILES ${DMGL_HEADERS} DESTINATION dynamechs/dmgl)
