--- a/src/kurmet/CMakeLists.txt
+++ b/src/kurmet/CMakeLists.txt
@@ -4,7 +4,13 @@ LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
 
 SET(KURMET_SRC  kurmet.cpp )
 ADD_EXECUTABLE(kurmet ${KURMET_SRC})
-TARGET_LINK_LIBRARIES(kurmet ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl)
+
+SET(FUNC_SRC functions.cpp)
+ADD_LIBRARY(func SHARED ${FUNC_SRC})
+SET_TARGET_PROPERTIES(func PROPERTIES VERSION 5.0 SOVERSION 1)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+
+TARGET_LINK_LIBRARIES(kurmet ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl func)
 
 
 
