minor modifications; calculate actual ZMP location

--- a/src/kurmet/kurmet.cfg
+++ b/src/kurmet/kurmet.cfg
@@ -8,4 +8,4 @@ Display_Update_Rate      20
 
 Environment_Parameter_File	"kurmet.env"
 
-Robot_Parameter_File		"kurmet.dm"
+Robot_Parameter_File		"flat_kurmet.dm"
