fix for a linking error caused by gcc upgrade - rt library

--- a/src/dm/CMakeLists.txt
+++ b/src/dm/CMakeLists.txt
@@ -33,7 +33,7 @@ SET(DM_SRCS  dm.h dmTime.h
 	gldraw.cpp )
 
 ADD_LIBRARY(dm SHARED ${DM_SRCS})
-TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY})
+TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY} rt)
 
 SET_TARGET_PROPERTIES(dm PROPERTIES VERSION 5.0 SOVERSION 1)
 
