GUI upgrade with wxWidgets, still have known bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,14 @@ MESSAGE(STATUS "Eigen headers path: " ${Eigen_INCLUDE_DIRS})
 ADD_SUBDIRECTORY(src/dm bin_dm)
 ADD_SUBDIRECTORY(src/dmu bin_dmu)
 ADD_SUBDIRECTORY(src/dmgl bin_dmgl)
-ADD_SUBDIRECTORY(src/testdm bin_testdm)
-ADD_SUBDIRECTORY(src/aquarobot bin_aquarobot)
-ADD_SUBDIRECTORY(src/xan_viewer bin_xan_viewer)
-ADD_SUBDIRECTORY(src/kurmet bin_kurmet)
-ADD_SUBDIRECTORY(src/windmill bin_windmill)
-ADD_SUBDIRECTORY(src/flywheel_biped bin_flywheel_biped)
+ADD_SUBDIRECTORY(src/wxdmgl bin_wxdmgl)
+#ADD_SUBDIRECTORY(src/testdm bin_testdm)
+#ADD_SUBDIRECTORY(src/aquarobot bin_aquarobot)
+#ADD_SUBDIRECTORY(src/xan_viewer bin_xan_viewer)
+#ADD_SUBDIRECTORY(src/kurmet bin_kurmet)
+#ADD_SUBDIRECTORY(src/windmill bin_windmill)
+#ADD_SUBDIRECTORY(src/flywheel_biped bin_flywheel_biped)
+ADD_SUBDIRECTORY(src/wxDMV bin_wxDMV)
 
 MESSAGE(STATUS "CMAKE_INSTALL_PREFIX is: " ${CMAKE_INSTALL_PREFIX})
 
