known bugs fixed, now can do simulation with dm under wxWidgets framework; new wxDMGL library.

--- a/src/wxDMV/CMakeLists.txt
+++ b/src/wxDMV/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(wxWidgets COMPONENTS core base gl REQUIRED)
 
 include( "${wxWidgets_USE_FILE}" )
 
-SET(SRCS global.cpp main.cpp )
+SET(SRCS global.cpp main.cpp userControl.cpp)
 ADD_EXECUTABLE(DMViewer ${SRCS})
 
 
