CMake project for humanoid; ubuntu compatibility update for humanoid

--- a/src/humanoid/CMakeLists.txt
+++ b/src/humanoid/CMakeLists.txt
@@ -1,26 +1,26 @@
 cmake_minimum_required(VERSION 2.8)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/dm  ${PROJECT_SOURCE_DIR}/src/dmu ${PROJECT_SOURCE_DIR}/src/dmgl)
-LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
-
-SET(KURMET_SRC  kurmet.cpp )
-ADD_EXECUTABLE(kurmet ${KURMET_SRC})
-
-SET(FUNC_SRC functions.cpp)
-ADD_LIBRARY(func SHARED ${FUNC_SRC})
-SET_TARGET_PROPERTIES(func PROPERTIES VERSION 5.0 SOVERSION 1)
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
-
-TARGET_LINK_LIBRARIES(kurmet ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl func)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/dm  ${PROJECT_SOURCE_DIR}/src/dmu ${PROJECT_SOURCE_DIR}/src/dmgl ${PROJECT_SOURCE_DIR}/src/wxdmgl ${PROJECT_SOURCE_DIR}/src/mosek/6/tools/platform/linux64x86/h )
+LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib )
 
 
+find_package(wxWidgets COMPONENTS core base gl REQUIRED)
 
-# set(DEMOS simple start pendulum tree carts wire ring )
-# set(CORELIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl)
+include( "${wxWidgets_USE_FILE}" )
 
-# foreach(demo ${DEMOS}
-#   add_executable(${demo} ${demo}.cpp)
-#   target_link_libraries(${demo} ${CORELIBS})
-# endforeach(demo)
+SET(SRCS  humanoidWx.cpp
+          humanoidControl.cpp 
+          CubicSpline.cpp
+          CubicSplineTrajectory.cpp
+          DataLogger.cpp
+          GlobalDefines.cpp
+          TaskSpaceController.cpp)
+ADD_EXECUTABLE(humanoid ${SRCS})
+
+
+TARGET_LINK_LIBRARIES(humanoid ${wxWidgets_LIBRARIES} ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu wxdmgl ${PROJECT_SOURCE_DIR}/src/mosek/6/tools/platform/linux64x86/bin/libmosek64.so ${PROJECT_SOURCE_DIR}/src/mosek/6/tools/platform/linux64x86/bin/libmoseknoomp64.so)
+
+
+
 
 
 
