Updated Main Frame for Key Combos for Graphics

--- a/src/humanoid/humanoid.cfg
+++ b/src/humanoid/humanoid.cfg
@@ -12,3 +12,5 @@ Display_Update_Rate      20
 Environment_Parameter_File	"humanoid.env"
 
 Robot_Parameter_File		"humanoid.dm"
+
+Data_Save_Directory			"/Users/pwensing/Documents/MATLAB/humanoid/data/"
