new dynamic contact model class, updated dmLoadFile_dm40, CMakelists, etc. not fully debugged yet.

--- a/src/dm/CMakeLists.txt
+++ b/src/dm/CMakeLists.txt
@@ -20,6 +20,8 @@ SET(DM_SRCS  dm.h dmTime.h
 	dmTreadmill.hpp dmTreadmill.cpp 
 	dmForce.hpp dmForce.cpp 
 	dmContactModel.hpp dmContactModel.cpp 
+	dmDynamicContactModel.hpp dmDynamicContactModel.cpp
+	dmContactSystem.hpp dmContactSystem.cpp  
 	dmSecondaryForce.hpp dmSecondaryForce.cpp 
 	dmSecondaryJoint.hpp dmSecondaryJoint.cpp 
 	dmSecondarySphericalJoint.hpp dmSecondarySphericalJoint.cpp 
