--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ ADD_SUBDIRECTORY(src/dm bin_dm)
 ADD_SUBDIRECTORY(src/dmu bin_dmu)
 ADD_SUBDIRECTORY(src/dmgl bin_dmgl)
 ADD_SUBDIRECTORY(src/wxdmgl bin_wxdmgl)
-#ADD_SUBDIRECTORY(src/testdm bin_testdm)
+ADD_SUBDIRECTORY(src/testdm bin_testdm)
 #ADD_SUBDIRECTORY(src/aquarobot bin_aquarobot)
 #ADD_SUBDIRECTORY(src/xan_viewer bin_xan_viewer)
 #ADD_SUBDIRECTORY(src/kurmet bin_kurmet)
