--- a/src/humanoid/config/humanoid.env
+++ b/src/humanoid/config/humanoid.env
@@ -9,9 +9,14 @@ Terrain_Data_Filename		"terrain.dat"
 Ground_Planar_Spring_Constant		75000
 Ground_Normal_Spring_Constant		75000
 Ground_Planar_Damper_Constant		547
-Ground_Normal_Damper_Constant		2000
+#Ground_Normal_Damper_Constant		547
+
+Ground_Normal_Damper_Constant		3000
 #Previous value 2000
 
-Ground_Static_Friction_Coeff		0.9
-Ground_Kinetic_Friction_Coeff		0.86
+Ground_Static_Friction_Coeff		1
+Ground_Kinetic_Friction_Coeff		1
+
+#Ground_Static_Friction_Coeff		0.9
+#Ground_Kinetic_Friction_Coeff		0.86
 
