contact demo continues (added GL features and model bug fixes )

--- a/src/contact_demo/config/contact_demo.cfg
+++ b/src/contact_demo/config/contact_demo.cfg
@@ -2,11 +2,11 @@
 # simulation configuration file - read in by main().
 #
 
-Integration_Stepsize	0.0001
-Control_Stepsize        0.001
+Integration_Stepsize	0.0000001
+Control_Stepsize        0.0001
 
 # Update Rate in Hz
-Display_Update_Rate      20
+Display_Update_Rate      100
 
 
 Environment_Parameter_File	"environment.env"
