--- a/src/contact_demo/config/environment.env
+++ b/src/contact_demo/config/environment.env
@@ -7,8 +7,10 @@ Gravity_Vector		0	0	-9.81
 Terrain_Data_Filename		"terrain.dat"
 
 Ground_Planar_Spring_Constant		75000
+#Ground_Planar_Spring_Constant		7500
 Ground_Normal_Spring_Constant		75000
 Ground_Planar_Damper_Constant		547
+#Ground_Planar_Damper_Constant		0
 Ground_Normal_Damper_Constant		2000
 #Previous value 2000
 
