--- a/src/contact_demo/config/environment.env
+++ b/src/contact_demo/config/environment.env
@@ -4,7 +4,7 @@
 Gravity_Vector		0	0	-9.81
 #Gravity_Vector		0	0	0
 
-Terrain_Data_Filename		"terrain.dat"
+Terrain_Data_Filename		"terrain2.dat"
 
 Ground_Planar_Spring_Constant		75000
 #Ground_Planar_Spring_Constant		7500
