--- a/src/contact_demo/config/contact_demo.cfg
+++ b/src/contact_demo/config/contact_demo.cfg
@@ -11,6 +11,6 @@ Display_Update_Rate      100
 
 Environment_Parameter_File	"environment.env"
 
-Robot_Parameter_File		"boxSingleDC.dm"
+Robot_Parameter_File		"disc.dm"
 
 Data_Save_Directory			"/home/yiping/Documents/MATLAB/ypdata/contact_demo_data"
