draw skeleton in gldraw; memeber of dmRigidBody, m_cg_pos, changed from private to protected

--- a/src/contact_demo/CMakeLists.txt
+++ b/src/contact_demo/CMakeLists.txt
@@ -9,7 +9,7 @@ include( "${wxWidgets_USE_FILE}" )
 
 SET(SRCS  srcs/main.cpp
 		  srcs/BasicGLPane.cpp
-		  srcs/MainFrame.cpp
+		  srcs/ContactMainFrame.cpp
 		  srcs/SimulationThread.cpp
 		  srcs/userGraphics.cpp
 		  srcs/globalFunctions.cpp
