Box Humanoid Jumps!

--- a/src/humanoid/config/humanoid_box.env
+++ b/src/humanoid/config/humanoid_box.env
@@ -6,13 +6,17 @@ Gravity_Vector		0	0	-9.81
 
 Terrain_Data_Filename		"terrain.dat"
 
-Ground_Planar_Spring_Constant		75000
-Ground_Normal_Spring_Constant		75000
-Ground_Planar_Damper_Constant		2000
+#Ground_Planar_Spring_Constant		75000
+#Ground_Normal_Spring_Constant		75000
+#Ground_Planar_Damper_Constant		547
 #Ground_Normal_Damper_Constant		547
-
-Ground_Normal_Damper_Constant		2001
+#Ground_Normal_Damper_Constant		2000
 #Previous value 2000
+
+Ground_Planar_Spring_Constant 25000
+Ground_Normal_Spring_Constant 25000
+Ground_Planar_Damper_Constant 650
+Ground_Normal_Damper_Constant 650
 
 Ground_Static_Friction_Coeff		1
 Ground_Kinetic_Friction_Coeff		1
