--- a/src/humanoid/config/humanoid_box.env
+++ b/src/humanoid/config/humanoid_box.env
@@ -4,7 +4,7 @@
 Gravity_Vector		0	0	-9.81
 #Gravity_Vector		0	0	0
 
-Terrain_Data_Filename		"terrain3.dat"
+Terrain_Data_Filename		"terrain.dat"
 
 #Ground_Planar_Spring_Constant		75000
 #Ground_Normal_Spring_Constant		75000
