--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ ADD_SUBDIRECTORY(src/wxdmgl bin_wxdmgl)
 #ADD_SUBDIRECTORY(src/flywheel_biped bin_flywheel_biped)
 #ADD_SUBDIRECTORY(src/wxDMV bin_wxDMV)
 ADD_SUBDIRECTORY(src/humanoid bin_humanoid)
-ADD_SUBDIRECTORY(src/contact_demo bin_contact_demo)
+#ADD_SUBDIRECTORY(src/contact_demo bin_contact_demo)
 ADD_SUBDIRECTORY(src/optimization_test bin_optimization_test)
 
 MESSAGE(STATUS "CMAKE_INSTALL_PREFIX is: " ${CMAKE_INSTALL_PREFIX})
