--- a/src/optimization_test/config/opt_test.cfg
+++ b/src/optimization_test/config/opt_test.cfg
@@ -2,8 +2,8 @@
 # simulation configuration file - read in by main().
 #
 
-Integration_Stepsize	0.0001
-Control_Stepsize        0.0001
+Integration_Stepsize	0.00005
+Control_Stepsize        0.001
 
 # Update Rate in Hz
 Display_Update_Rate      100
@@ -11,6 +11,7 @@ Display_Update_Rate      100
 
 Environment_Parameter_File	"environment.env"
 
-Robot_Parameter_File		"JaemiHubo.dm"
+Robot_Parameter_File		"humanoid_box.dm"
+# Robot_Parameter_File		"JaemiHubo.dm"
 
 Data_Save_Directory			"/home/yiping/Documents/MATLAB/ypdata/optimization_test_data"
