--- a/src/dm/CMakeLists.txt
+++ b/src/dm/CMakeLists.txt
@@ -35,14 +35,21 @@ SET(DM_SRCS  dm.h dmTime.h
 	gldraw.cpp )
 
 ADD_LIBRARY(dm SHARED ${DM_SRCS})
-TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY} rt)
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY})
+ELSE()
+    TARGET_LINK_LIBRARIES(dm ${OPENGL_LIBRARY} rt)
+ENDIF()
+
+
 
 SET_TARGET_PROPERTIES(dm PROPERTIES VERSION 5.0 SOVERSION 1)
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 INSTALL(TARGETS dm 
-        LIBRARY DESTINATION dynamechs/lib)
+        DESTINATION dynamechs/lib)
 FILE( GLOB DM_HEADERS [^.]*.h [^.]*.hpp )
 # MESSAGE(STATUS "dm headers" ${DM_HEADERS})
 INSTALL(FILES ${DM_HEADERS} DESTINATION dynamechs/dm)
