--- a/src/dmu/CMakeLists.txt
+++ b/src/dmu/CMakeLists.txt
@@ -17,6 +17,6 @@ SET_TARGET_PROPERTIES(dmu PROPERTIES VERSION 5.0 SOVERSION 1)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
 INSTALL(TARGETS dmu 
-        LIBRARY DESTINATION dynamechs/lib)
+        DESTINATION dynamechs/lib)
 FILE( GLOB DMU_HEADERS [^.]*.h [^.]*.hpp )
 INSTALL(FILES ${DMU_HEADERS} DESTINATION dynamechs/dmu)
