--- a/src/showRobot/CMakeLists.txt
+++ b/src/showRobot/CMakeLists.txt
@@ -17,7 +17,7 @@ ELSE()
     #SET(wxWidgets_ROOT_DIR /usr/local/bin)
     find_package(wxWidgets 2.9 COMPONENTS core base gl REQUIRED)
     if(wxWidgets_FOUND)
-        message("optimization_test: wxWidgets found successfully :) ")
+        message("showRobot: wxWidgets found successfully :) ")
 		message(STATUS "wxWidgets Libraries: " ${wxWidgets_LIBRARIES})
         include( ${wxWidgets_USE_FILE} )
     else()
