--- a/src/humanoid/config/humanoid_box.env
+++ b/src/humanoid/config/humanoid_box.env
@@ -13,10 +13,17 @@ Terrain_Data_Filename		"terrain.dat"
 #Ground_Normal_Damper_Constant		2000
 #Previous value 2000
 
-Ground_Planar_Spring_Constant 25000
-Ground_Normal_Spring_Constant 25000
-Ground_Planar_Damper_Constant 650
-Ground_Normal_Damper_Constant 650
+#Ground_Planar_Spring_Constant 25000
+#Ground_Normal_Spring_Constant 25000
+#Ground_Planar_Damper_Constant 650
+#Ground_Normal_Damper_Constant 650
+
+Ground_Planar_Spring_Constant 100000
+Ground_Normal_Spring_Constant 100000
+Ground_Planar_Damper_Constant 2400
+Ground_Normal_Damper_Constant 2400
+
+
 
 Ground_Static_Friction_Coeff		1
 Ground_Kinetic_Friction_Coeff		1
