--- a/src/humanoid/config/humanoid_box.env
+++ b/src/humanoid/config/humanoid_box.env
@@ -1,7 +1,7 @@
 # Environment File
 
 
-#Gravity_Vector		0	0	-9.81
+#Gravity_Vector		0	0	-9.8
 Gravity_Vector		0	0	0
 
 Terrain_Data_Filename		"terrain.dat"
@@ -21,7 +21,8 @@ Terrain_Data_Filename		"terrain.dat"
 Ground_Planar_Spring_Constant 100000
 Ground_Normal_Spring_Constant 100000
 Ground_Planar_Damper_Constant 2400
-Ground_Normal_Damper_Constant 2400
+#Ground_Normal_Damper_Constant 2400
+Ground_Normal_Damper_Constant 1200
 
 
 
