update: use conic formulation for Task space control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 2.8)
 PROJECT(DynaMechs)
 MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
 MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
-MESSAGE(STATUS "CMAKE_ROOT is" ${CMAKE_ROOT})
+MESSAGE(STATUS "CMAKE_ROOT is " ${CMAKE_ROOT})
 MESSAGE(STATUS "CMAKE_SYSTEM_NAME is " ${CMAKE_SYSTEM_NAME})
+
+SET(CMAKE_MODULE_PATH "${CMAKE_ROOT}/Modules;${CMAKE_MODULE_PATH}")
+message(STATUS "CMAKE_MODULE_PATH is " ${CMAKE_MODULE_PATH} )
 
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 MESSAGE(STATUS "Adding Mac hooks (tested with OSX 10.7)")
@@ -61,10 +64,10 @@ ENDIF()
 
 
 
-ADD_SUBDIRECTORY(src/dm bin_dm)
-ADD_SUBDIRECTORY(src/dmu bin_dmu)
-ADD_SUBDIRECTORY(src/dmgl bin_dmgl)
-ADD_SUBDIRECTORY(src/wxdmgl bin_wxdmgl)
+ADD_SUBDIRECTORY(src/dm build/bin_dm)
+ADD_SUBDIRECTORY(src/dmu build/bin_dmu)
+ADD_SUBDIRECTORY(src/dmgl build/bin_dmgl)
+ADD_SUBDIRECTORY(src/wxdmgl build/bin_wxdmgl)
 #ADD_SUBDIRECTORY(src/testdm bin_testdm)
 #ADD_SUBDIRECTORY(src/aquarobot bin_aquarobot)
 #ADD_SUBDIRECTORY(src/xan_viewer bin_xan_viewer)
@@ -72,11 +75,12 @@ ADD_SUBDIRECTORY(src/wxdmgl bin_wxdmgl)
 #ADD_SUBDIRECTORY(src/windmill bin_windmill)
 #ADD_SUBDIRECTORY(src/flywheel_biped bin_flywheel_biped)
 #ADD_SUBDIRECTORY(src/wxDMV bin_wxDMV)
-ADD_SUBDIRECTORY(src/humanoid bin_humanoid)
+ADD_SUBDIRECTORY(src/humanoid build/bin_humanoid)
 #ADD_SUBDIRECTORY(src/contact_demo bin_contact_demo)
-ADD_SUBDIRECTORY(src/optimization_test bin_optimization_test)
-ADD_SUBDIRECTORY(src/showRobot bin_showRobot)
-ADD_SUBDIRECTORY(src/huboplus1 bin_huboplus1)
+#ADD_SUBDIRECTORY(src/optimization_test build/bin_optimization_test)
+ADD_SUBDIRECTORY(src/showRobot build/bin_showRobot)
+ADD_SUBDIRECTORY(src/huboplus1 build/bin_huboplus1)
+#ADD_SUBDIRECTORY(src/walking build/bin_walk)
 
 MESSAGE(STATUS "CMAKE_INSTALL_PREFIX is: " ${CMAKE_INSTALL_PREFIX})
 
